deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
  namespace: cicd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
      - name: hello-nginx
        image: quay.io/redhattraining/hello-world-nginx:v1.0
        ports:
        - containerPort: 80
