service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  namespace: cicd
spec:
  selector:
    app: hello-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
