route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-nginx
  namespace: cicd
spec:
  to:
    kind: Service
    name: hello-nginx
  port:
    targetPort: 8080
